Millores en nova API de SWAGGER #909  (Punt 7)
