# api-interna/src/main/java/es/caib/portafib/api/interna/secure/firma/v1/commons/FirmaSimpleStatus.java
@@ -1,78 +1,113 @@
 package es.caib.portafib.api.interna.secure.firma.v1.commons;
 
-public class FirmaSimpleStatus{
-		
-	/*public enum STATUS {
-		  INITIALIZING (0),
-		  IN_PROGRESS (1),
-		  FINAL_OK (2),
-		  FINAL_ERROR (-1),
-		  CANCELLED (-2);
-		  
-		 public final int value;
-		 
-		 public int getValue() {
-			 return this.value;
-		 }
-		
-		  private STATUS (int i) {
-			  this.value=i;
-		  }
-	  }*/
-	
-		
-	  public static final int STATUS_INITIALIZING = 0;
-	  
-	  public static final int STATUS_IN_PROGRESS = 1;
+import es.caib.portafib.commons.utils.Constants;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.media.Schema.AccessMode;
 
-	  public static final int STATUS_FINAL_OK = 2;
-	  
-	  public static final int STATUS_FINAL_ERROR = -1;
-	  
-	  public static final int STATUS_CANCELLED = -2;
-	  
-	  protected int status = STATUS_INITIALIZING;
+public class FirmaSimpleStatus {
 
-	  protected String errorMessage;
+    /*public enum STATUS {
+    	  INITIALIZING (0),
+    	  IN_PROGRESS (1),
+    	  FINAL_OK (2),
+    	  FINAL_ERROR (-1),
+    	  CANCELLED (-2);
+    	  
+    	 public final int value;
+    	 
+    	 public int getValue() {
+    		 return this.value;
+    	 }
+    	
+    	  private STATUS (int i) {
+    		  this.value=i;
+    	  }
+      }*/
 
-	  protected String errorStackTrace;
+    @Schema(
+            description = "Codi d'estat d'una petició de firma que indica un que s'esta inicialitzant",
+            nullable = false,
+            defaultValue = "" + Constants.STATUS_INITIALIZING,
+            implementation = Integer.class,
+            required = true,
+            accessMode = AccessMode.READ_ONLY)
+    public final int STATUS_INITIALIZING = Constants.STATUS_INITIALIZING;
 
+    @Schema(
+            description = "Codi d'estat d'una petició de firma que indica un que esta en procés",
+            nullable = false,
+            defaultValue = "" + Constants.STATUS_IN_PROGRESS,
+            implementation = Integer.class,
+            required = true,
+            accessMode = AccessMode.READ_ONLY)
+    public final int STATUS_IN_PROGRESS = Constants.STATUS_IN_PROGRESS;
 
-	  public FirmaSimpleStatus() {
-	    super();
-	  }
+    @Schema(
+            description = "Codi d'estat d'una petició de firma que indica que ha finalitzat correctament",
+            nullable = false,
+            defaultValue = "" + Constants.STATUS_FINAL_OK,
+            implementation = Integer.class,
+            required = true,
+            accessMode = AccessMode.READ_ONLY)
+    public final int STATUS_FINAL_OK = Constants.STATUS_FINAL_OK;
 
-	  public FirmaSimpleStatus(int status, String errorMessage, String errorStackTrace) {
-	    super();
-	    this.status = status;
-	    this.errorMessage = errorMessage;
-	    this.errorStackTrace = errorStackTrace;
-	  }
-	  
-	  public int getStatus() {
-		    return status;
-		  }
+    @Schema(
+            description = "Codi d'estat d'una petició de firma que indica que ha finalitzat amb errors",
+            nullable = false,
+            defaultValue = "" + Constants.STATUS_FINAL_ERROR,
+            implementation = Integer.class,
+            required = true,
+            accessMode = AccessMode.READ_ONLY)
+    public final int STATUS_FINAL_ERROR = Constants.STATUS_FINAL_ERROR;
 
-		  public void setStatus(int status) {
-		    this.status = status;
-		  }
+    @Schema(
+            description = "Codi d'estat d'una petició de firma que indica que ha sigut cancelada",
+            nullable = false,
+            defaultValue = "" + Constants.STATUS_CANCELLED,
+            implementation = Integer.class,
+            required = true,
+            accessMode = AccessMode.READ_ONLY)
+    public final int STATUS_CANCELLED = Constants.STATUS_CANCELLED;
 
-		  public String getErrorMessage() {
-		    return errorMessage;
-		  }
+    protected int status = STATUS_INITIALIZING;
 
-		  public void setErrorMessage(String errorMessage) {
-		    this.errorMessage = errorMessage;
-		  }
+    protected String errorMessage;
 
-		  public String getErrorStackTrace() {
-		    return errorStackTrace;
-		  }
+    protected String errorStackTrace;
 
-		  public void setErrorStackTrace(String errorStackTrace) {
-		    this.errorStackTrace = errorStackTrace;
-		  }
+    public FirmaSimpleStatus() {
+        super();
+    }
 
-	}
+    public FirmaSimpleStatus(int status, String errorMessage, String errorStackTrace) {
+        super();
+        this.status = status;
+        this.errorMessage = errorMessage;
+        this.errorStackTrace = errorStackTrace;
+    }
 
+    public int getStatus() {
+        return status;
+    }
 
+    public void setStatus(int status) {
+        this.status = status;
+    }
+
+    public String getErrorMessage() {
+        return errorMessage;
+    }
+
+    public void setErrorMessage(String errorMessage) {
+        this.errorMessage = errorMessage;
+    }
+
+    public String getErrorStackTrace() {
+        return errorStackTrace;
+    }
+
+    public void setErrorStackTrace(String errorStackTrace) {
+        this.errorStackTrace = errorStackTrace;
+    }
+
+}
